--- a/style.css
+++ b/style.css
@@ -23,13 +23,14 @@ button {
 .container {
     display: flex;
     flex-wrap: wrap;
-    max-height: 320px;
-    max-width: 320px;
+    min-height: 960px;
+    min-width: 960px;
+    max-height: 960px;
+    max-width: 960px;
 
 }
 
 .squares {
-    height: 20px;
-    width: 20px;
+    
     background-color: gray;
 }
