--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.663);
 }
 
 h1 {
     display: flex;
     justify-content: center;
-    color:blue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:rgb(200, 200, 200);
     padding: 0px;
     margin: 0;
 }
@@ -27,6 +29,7 @@ button {
     min-width: 960px;
     max-height: 960px;
     max-width: 960px;
+    box-shadow: black 15px 15px 50px;
 
 }
 
